6 January 2015: Wouter
	- iana portlist update.
	- patch for remote control over local sockets, from Dag-Erling
	  Smorgrav, Ilya Bakulin.  Use control-interface: /path/sock and
	  control-use-cert: no.

5 January 2015: Wouter
	- getauxval test for ppc64 linux compatibility.
	- make strip works for unbound-host and unbound-anchor.
	- patch from Stephane Lapie that adds to the python API, that
	  exposes struct delegpt, and adds the find_delegation function.
	- print query name when max target count is exceeded.
	- patch from Brad Smith that fixes DESTDIR in unbound-control-setup
	  for installs where config is not in the prefix location.
	- Fix #634: fix fail to start on Linux LTS 3.14.X, ignores missing
	  IP_MTU_DISCOVER OMIT option (fix from Remi Gacogne).
	- Updated contrib warmup.cmd/sh to support two modes - load
	  from pre-defined list of domains or (with filename as argument)
	  load from user-specified list of domains, and updated contrib
	  unbound_cache.sh/cmd to support loading/save/reload cache to/from
	  default path or (with secondary argument) arbitrary path/filename,
	  from Yuri Voinov.
	- Patch from Philip Paeps to contrib/unbound_munin_ that uses
	  type ABSOLUTE.  Allows munin.conf: [idleserver.example.net]
	  unbound_munin_hits.graph_period minute

9 December 2014: Wouter
	- svn trunk has 1.5.2 in development.
	- config.guess and config.sub update from libtoolize.
	- local-zone: example.com inform makes unbound log a message with
	  client IP for queries in that zone.  Eg. for finding infected hosts.

8 December 2014: Wouter
	- Fix CVE-2014-8602: denial of service by making resolver chase
	  endless series of delegations.

1 December 2014: Wouter
	- Fix bug#632: unbound fails to build on AArch64, protects
	  getentropy compat code from calling sysctl if it is has been removed.

29 November 2014: Wouter
	- Add include to getentropy_linux.c, hopefully fixing debian build.

28 November 2014: Wouter