@@ -3,6 +3,7 @@
 	- patch for remote control over local sockets, from Dag-Erling
 	  Smorgrav, Ilya Bakulin.  Use control-interface: /path/sock and
 	  control-use-cert: no.
+	- Fixup that patch and uid lookup (only for daemon).
 
 5 January 2015: Wouter
 	- getauxval test for ppc64 linux compatibility.
